apps/base/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy: {}
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 2004
        runAsGroup: 2000
      containers:
        - image: lscr.io/linuxserver/sonarr:4.0.19.2979-ls324
          name: sonarr
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: run
              mountPath: /run
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          resources:
            limits:
              memory: 272Mi
            requests:
              cpu: 3m
              memory: 272Mi
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: run
          emptyDir:
            sizeLimit: 500Mi
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: data
          persistentVolumeClaim:
            claimName: media-data
