apps/base/media/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: sonarr.local
      http:
        paths:
          - backend:
              service:
                name: sonarr
                port:
                  number: 80
            path: /
            pathType: Prefix
